SBuild Eclispe Plugin 0.3.0 - 2013-01-06

* Switched to Scala 2.10.
* Supported SBuild version is now 0.3.0 or above because of Scala 2.10 binary
  incompatibilities.
* Made execution more robust.

SBuild Eclipse Plugin 0.2.1 - 2012-11-07

* The SBuild Libraries classpath will be automatically refreshed when
  workspace projects will be opened or closed, resulting in proper workspace
  resolution.
* Added Scala Library to Eclipse Update Site

SBuild Eclipse Plugin 0.2.0 - 2012-10-30

* First separate release of SBuild Eclipse Plugin, with independent version,
  compatible to SBuild 0.1.4 and above.
* Added Graphical Editor for Workspace Project Aliases to Classpath container
  configuration page (Build Path -> Libraries -> SBuild Libraries -> Edit).
* Minimal supported Eclipse version is now 3.4.
* Added support for regular expressions in workspace project alias
  configuration.